Fix issue with popup not showing up

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -47,4 +47,5 @@ code {
 
 .highlight {
   animation: breathing 2s ease-in-out infinite;
+  border-radius: 0.25rem;
 }
